# g13-apps

./: Cargo.toml  g13-apps.bind  g13-apps.service  readme.adoc
.github/workflows/: rust.yml
src/: display.rs  error.rs  main.rs  style.rs
src/app/: clock.rs  error.rs  hello.rs  menu.rs  mod.rs
src/app/music/: error.rs  mod.rs  player.rs  selector.rs
src/component/: appbar.rs  buttonbar.rs  list.rs  mod.rs
