[package]
name = "g13-apps"
version = "0.1.0"
authors = ["FuseTim <fusetim@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6.2"
thiserror = "1.0"
tokio = { version = "0.2.21", features = ["full"] }
async-trait = "0.1.36"
enum_dispatch = "0.3.1"
strum = "0.18.0"
strum_macros = "0.18.0"
ibm437 = "0.1.0"
once_cell = "1.4.0"

chrono = { version = "0.4", optional = true }

[features]
default = ["clock"]

clock = ["chrono"]